src/JinjaCssGrammar/JinjaCssGrammar/ProjectParser.java
// Generated from /home/mohee/compiler_project1/src/JinjaCssGrammar/ProjectParser.g4 by ANTLR 4.13.2
package JinjaCssGrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProjectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_COMMENT=1, HTML_WS=2, SCRIPT_OPEN=3, STYLE_OPEN=4, TAG_OPEN=5, JINJA_VAR_OPEN=6, 
		JINJA_BLOCK_OPEN=7, HTML_TEXT=8, COMMENT_JINJA=9, TAG_CLOSE=10, TAG_SLASH=11, 
		TAG_EQUALS=12, TAG_NAME=13, TAG_WHITESPACE=14, SCRIPT_BODY=15, SCRIPT_SHORT_BODY=16, 
		ATTVALUE_VALUE=17, ATTRIBUTE=18, JINJA_VAR_CLOSE=19, JINJA_BLOCK_CLOSE=20, 
		NUMBER_JINJA=21, JINJA_COMMENT=22, PLUS_JINJA=23, MINUS_JINJA=24, MULTI_JINJA=25, 
		SLASH_JINJA=26, PERCENT_JINJA=27, DOT_JINJA=28, EQUALS_EQUALS_JINJA=29, 
		EQUALS_JINJA=30, NOT_EQUALS_JINJA=31, AND_JINJA=32, OR_JINJA=33, JINJA_IN=34, 
		JINJA_FOR=35, JINJA_END_FOR=36, JINJA_IF=37, JINJA_ELSE=38, JINJA_ELIF=39, 
		JINJA_END_IF=40, IDENTIFIER_JINJA=41, PIPE=42, LPAREN=43, RPAREN=44, STRING_JINJA=45, 
		JINJA_WS=46, NUMBER_CSS=47, LBRACE=48, RBRACE=49, CSS_LPAREN=50, CSS_RPAREN=51, 
		DASH=52, COLON=53, SEMI=54, COMMA=55, DOT=56, STAR=57, HASH=58, TILDE=59, 
		STYLE_CLOSE=60, UNIT=61, COLOR=62, COLOR_RGB=63, COLOR_RGBA=64, COLOR_HSL=65, 
		COLOR_HSLA=66, CSS_IMPORT=67, CSS_MEDIA=68, CSS_FONT_FACE=69, CSS_KEYFRAMES=70, 
		IMPORTANT=71, CSS_KEYWORD=72, CSS_CUSTOM_PROP=73, CSS_URL=74, CSS_CALC=75, 
		CSS_VAR=76, CSS_WS=77, CSS_COMMENT=78, IDENTIFIER_CSS=79, STRING_CSS=80, 
		SEA_WS=81;
	public static final int
		RULE_program = 0, RULE_node = 1, RULE_htmlElement = 2, RULE_normalElement = 3, 
		RULE_selfClosingElement = 4, RULE_htmlContent = 5, RULE_htmlAttribute = 6, 
		RULE_htmlChardata = 7, RULE_htmlMisc = 8, RULE_script = 9, RULE_style = 10, 
		RULE_jinjaElement = 11, RULE_jinjaVariable = 12, RULE_jinjaBlock = 13, 
		RULE_jinjaBody = 14, RULE_jinjaExpression = 15, RULE_jinjaPrimary = 16, 
		RULE_forStatement = 17, RULE_ifStatement = 18, RULE_elifBlock = 19, RULE_elseBlock = 20, 
		RULE_cssStyle = 21, RULE_cssStatement = 22, RULE_cssRule = 23, RULE_cssSelector = 24, 
		RULE_selectorGroup = 25, RULE_selector = 26, RULE_compoundSelector = 27, 
		RULE_simpleSelector = 28, RULE_typeSelector = 29, RULE_classSelector = 30, 
		RULE_idSelector = 31, RULE_pseudoSelector = 32, RULE_cssDeclaration = 33, 
		RULE_cssFunction = 34, RULE_cssValueList = 35, RULE_cssValue = 36, RULE_cssTerm = 37, 
		RULE_cssAtRule = 38, RULE_cssMedia = 39, RULE_cssMediaQuery = 40, RULE_cssMediaExpr = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "node", "htmlElement", "normalElement", "selfClosingElement", 
			"htmlContent", "htmlAttribute", "htmlChardata", "htmlMisc", "script", 
			"style", "jinjaElement", "jinjaVariable", "jinjaBlock", "jinjaBody", 
			"jinjaExpression", "jinjaPrimary", "forStatement", "ifStatement", "elifBlock", 
			"elseBlock", "cssStyle", "cssStatement", "cssRule", "cssSelector", "selectorGroup", 
			"selector", "compoundSelector", "simpleSelector", "typeSelector", "classSelector", 
			"idSelector", "pseudoSelector", "cssDeclaration", "cssFunction", "cssValueList", 
			"cssValue", "cssTerm", "cssAtRule", "cssMedia", "cssMediaQuery", "cssMediaExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'<'", "'{{'", "'{%'", null, null, "'>'", 
			null, null, null, null, null, null, null, null, "'}}'", "'%}'", null, 
			null, "'+'", null, null, null, "'%'", null, "'=='", null, "'!='", "'&&'", 
			"'||'", "'in'", "'for'", "'endfor'", "'if'", "'else'", "'elif'", "'endif'", 
			null, "'|'", null, null, null, null, null, "'{'", "'}'", null, null, 
			null, "':'", "';'", "','", null, null, "'#'", "'~'", "'</style>'", null, 
			null, null, null, null, null, "'@import'", "'@media'", "'@font-face'", 
			"'@keyframes'", "'!important'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_COMMENT", "HTML_WS", "SCRIPT_OPEN", "STYLE_OPEN", "TAG_OPEN", 
			"JINJA_VAR_OPEN", "JINJA_BLOCK_OPEN", "HTML_TEXT", "COMMENT_JINJA", "TAG_CLOSE", 
			"TAG_SLASH", "TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", "SCRIPT_BODY", 
			"SCRIPT_SHORT_BODY", "ATTVALUE_VALUE", "ATTRIBUTE", "JINJA_VAR_CLOSE", 
			"JINJA_BLOCK_CLOSE", "NUMBER_JINJA", "JINJA_COMMENT", "PLUS_JINJA", "MINUS_JINJA", 
			"MULTI_JINJA", "SLASH_JINJA", "PERCENT_JINJA", "DOT_JINJA", "EQUALS_EQUALS_JINJA", 
			"EQUALS_JINJA", "NOT_EQUALS_JINJA", "AND_JINJA", "OR_JINJA", "JINJA_IN", 
			"JINJA_FOR", "JINJA_END_FOR", "JINJA_IF", "JINJA_ELSE", "JINJA_ELIF", 
			"JINJA_END_IF", "IDENTIFIER_JINJA", "PIPE", "LPAREN", "RPAREN", "STRING_JINJA", 
			"JINJA_WS", "NUMBER_CSS", "LBRACE", "RBRACE", "CSS_LPAREN", "CSS_RPAREN", 
			"DASH", "COLON", "SEMI", "COMMA", "DOT", "STAR", "HASH", "TILDE", "STYLE_CLOSE", 
			"UNIT", "COLOR", "COLOR_RGB", "COLOR_RGBA", "COLOR_HSL", "COLOR_HSLA", 
			"CSS_IMPORT", "CSS_MEDIA", "CSS_FONT_FACE", "CSS_KEYFRAMES", "IMPORTANT", 
			"CSS_KEYWORD", "CSS_CUSTOM_PROP", "CSS_URL", "CSS_CALC", "CSS_VAR", "CSS_WS", 
			"CSS_COMMENT", "IDENTIFIER_CSS", "STRING_CSS", "SEA_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProjectParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramDefContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(ProjectParser.EOF, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public ProgramDefContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterProgramDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitProgramDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitProgramDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 504L) != 0)) {
				{
				{
				setState(84);
				node();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
	 
		public NodeContext() { }
		public void copyFrom(NodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlNodeContext extends NodeContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public HtmlNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterHtmlNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitHtmlNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitHtmlNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaNodeContext extends NodeContext {
		public JinjaElementContext jinjaElement() {
			return getRuleContext(JinjaElementContext.class,0);
		}
		public JinjaNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterJinjaNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitJinjaNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitJinjaNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TextNodeContext extends NodeContext {
		public TerminalNode HTML_TEXT() { return getToken(ProjectParser.HTML_TEXT, 0); }
		public TextNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterTextNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitTextNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitTextNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_node);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCRIPT_OPEN:
			case STYLE_OPEN:
			case TAG_OPEN:
				_localctx = new HtmlNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				htmlElement();
				}
				break;
			case JINJA_VAR_OPEN:
			case JINJA_BLOCK_OPEN:
				_localctx = new JinjaNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				jinjaElement();
				}
				break;
			case HTML_TEXT:
				_localctx = new TextNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(HTML_TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlSelfClosingElementContext extends HtmlElementContext {
		public SelfClosingElementContext selfClosingElement() {
			return getRuleContext(SelfClosingElementContext.class,0);
		}
		public HtmlSelfClosingElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterHtmlSelfClosingElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitHtmlSelfClosingElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitHtmlSelfClosingElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlScriptElementContext extends HtmlElementContext {
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public HtmlScriptElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterHtmlScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitHtmlScriptElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitHtmlScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlNormalElementContext extends HtmlElementContext {
		public NormalElementContext normalElement() {
			return getRuleContext(NormalElementContext.class,0);
		}
		public HtmlNormalElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterHtmlNormalElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitHtmlNormalElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitHtmlNormalElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlStyleElementContext extends HtmlElementContext {
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public HtmlStyleElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterHtmlStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitHtmlStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitHtmlStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new HtmlNormalElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				normalElement();
				}
				break;
			case 2:
				_localctx = new HtmlSelfClosingElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				selfClosingElement();
				}
				break;
			case 3:
				_localctx = new HtmlScriptElementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				script();
				}
				break;
			case 4:
				_localctx = new HtmlStyleElementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				style();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalElementContext extends ParserRuleContext {
		public NormalElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalElement; }
	 
		public NormalElementContext() { }
		public void copyFrom(NormalElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalTagContext extends NormalElementContext {
		public List<TerminalNode> TAG_OPEN() { return getTokens(ProjectParser.TAG_OPEN); }
		public TerminalNode TAG_OPEN(int i) {
			return getToken(ProjectParser.TAG_OPEN, i);
		}
		public List<TerminalNode> TAG_NAME() { return getTokens(ProjectParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(ProjectParser.TAG_NAME, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(ProjectParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(ProjectParser.TAG_CLOSE, i);
		}
		public HtmlContentContext htmlContent() {
			return getRuleContext(HtmlContentContext.class,0);
		}
		public TerminalNode TAG_SLASH() { return getToken(ProjectParser.TAG_SLASH, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public NormalTagContext(NormalElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterNormalTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitNormalTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitNormalTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NormalElementContext normalElement() throws RecognitionException {
		NormalElementContext _localctx = new NormalElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_normalElement);
		int _la;
		try {
			_localctx = new NormalTagContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(TAG_OPEN);
			setState(104);
			match(TAG_NAME);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(105);
				htmlAttribute();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(TAG_CLOSE);
			setState(112);
			htmlContent();
			setState(113);
			match(TAG_OPEN);
			setState(114);
			match(TAG_SLASH);
			setState(115);
			match(TAG_NAME);
			setState(116);
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingElementContext extends ParserRuleContext {
		public SelfClosingElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selfClosingElement; }
	 
		public SelfClosingElementContext() { }
		public void copyFrom(SelfClosingElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfCloseTagContext extends SelfClosingElementContext {
		public TerminalNode TAG_OPEN() { return getToken(ProjectParser.TAG_OPEN, 0); }
		public TerminalNode TAG_NAME() { return getToken(ProjectParser.TAG_NAME, 0); }
		public TerminalNode TAG_SLASH() { return getToken(ProjectParser.TAG_SLASH, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(ProjectParser.TAG_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public SelfCloseTagContext(SelfClosingElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterSelfCloseTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitSelfCloseTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitSelfCloseTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelfClosingElementContext selfClosingElement() throws RecognitionException {
		SelfClosingElementContext _localctx = new SelfClosingElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selfClosingElement);
		int _la;
		try {
			_localctx = new SelfCloseTagContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(TAG_OPEN);
			setState(119);
			match(TAG_NAME);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(120);
				htmlAttribute();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(TAG_SLASH);
			setState(127);
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
